<resources>
    <string name="app_name">AttentionAssessment</string>
    <string name="splash">Attention Assessment &amp; Training Game</string>

    <!-- Navigation Drawer-->
    <string name="heading">Attention Assessment Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="gender">Select your child\'s gender:</string>
    <string name="girl">Girl</string>
    <string name="boy">Boy</string>
    <string name="next">Next</string>
    <string name="skip">Skip...</string>
    <string name="previous">Previous</string>
    <string name="age">Select your child\'s age:</string>
    <string name="language">Select language:</string>
    <string name="childName">Child Name :</string>
    <string name="parentEmail">Email :</string>
    <string name="parentContact">Contact Number :</string>
    <string name="optional">* Optional</string>
    <string name="req">* Required</string>
    <string name="send">Send Data</string>
    <string name="diagnosis">Does your child show any symptoms of attention impairements?</string>
    <string name="loading">The video will take few seconds to load...</string>

    <string name="select">Select the</string>
    <string name="selecttxt">Press the yellow tick button after finishing the activity</string>
    <string name="birdselect">Pick your favourite character</string>
    <string name="focg1">Press the animal appearing on the screen</string>
    <string name="focg2">Press the bear coming out of the cave</string>
    <string name="divg1">Press the red button when the colours match</string>
    <string name="divg2">Press the animal at the bottom when both animals match</string>
    <string name="susg1">Press the bird when it sits on the branch</string>
    <string name="susg1txt">Press the red button when you want to finish the activity</string>
    <string name="altg1">Press the animal appearing on the screen</string>

    <string name="provideconsent">I have read this consent form and my questions have been answered. My signature below means that I do want my child to be in the study. I know that I can withdraw my child from the study at any time without any problems.</string>
    <string name="getSignature">Sign Here</string>
    <string name="changeSignature">Change Signature</string>
    <string name="proceed">Proceed</string>
    <string name="consentForm">Consent Form To Participate in a Research Study</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="agenull">Please select the age</string>
    <string name="gendernull">Please select the gender</string>

    <!-- Login Screen -->
    <string name="welcome">Welcome!</string>
    <string name="name">Enter your name</string>
    <string name="email">Enter a valid email address</string>
    <string name="contact">Enter a valid contact number Eg: 0771234567</string>
    <string name="empty">Response Needed</string>
    <string name="pwd">Enter your password</string>
    <string name="confirmPwd">Confirm password</string>
    <string name="fgtPassword">Forgot Password?</string>
    <string name="resetPassword">Reset Password</string>
    <string name="rememberPassword">Remember Password ?</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccnt">Create an Account</string>
    <string name="noAccnt">Don\'t have an account?</string>
    <string name="haveAccnt">Already have an account?</string>
    <string name="agree">I agree to the</string>
    <string name="terms">Terms and Conditions</string>
    <string name="fgtPwdPara">Enter your email and we\'ll send you a link to reset your password.</string>

</resources>