<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".age.AgeActivity">

    <TextView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/icon_left"
        android:drawableTint="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:text="@string/previous"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingLeft="30dp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/icon_right"
        android:drawableTint="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingRight="30dp"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="-8dp"
        android:src="@drawable/stick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/bunny_img"
        android:layout_width="220dp"
        android:layout_height="190dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="108dp"
        android:src="@drawable/age_bunny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/age_txt"
        android:layout_width="54dp"
        android:layout_height="113dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="4"
        android:textColor="@color/black"
        android:textSize="78dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bunny_img"
        app:layout_constraintStart_toStartOf="@+id/bunny_img" />

    <ImageButton
        android:id="@+id/right_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/right_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/left_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/left_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>